# FriendGraph

./: CMakeLists.txt  Edge.cpp  Edge.h  Graph.cpp  Graph.h  GraphWidget.cpp  GraphWidget.h  Makefile  Node.cpp  Node.h  README.md  example.json  main.cpp
headers/: Edge.h  Graph.h  GraphWidget.h  Node.h
source/: Edge.cpp  Graph.cpp  GraphWidget.cpp  Node.cpp  main.cpp
